Refatorado add User
-Refatorado endpoint e função add de User para utilizar promise.
-Adicionado e atualizada documentação do swagger para Product e User.
